testsuite/tests/typing-short-paths/pr5918.ml.reference

#             Characters 82-92:
   let _ = { a = () }
           ^^^^^^^^^^
Error: Some record fields are undefined: b
# 
